# NCU-3D-Graphic

./: .gitignore  .gitmodules
HW0/: CMakeLists.txt  hw0.cpp
Lab0/: Lab0.cpp
Lab1/: Lab1.cpp  Lab1.sln  Lab1.vcxproj  Lab1.vcxproj.filters  README.md  README.txt
Lab1/BasicGraph/: BasicGraph.h  Circle.cpp  Circle.h  Line.cpp  Point.cpp  Poly.cpp  Poly.h  RGBCode.cpp  RGBCode.h  Util.h
Lab2/: CMakeLists.txt  Lab1.vcxproj  Lab1.vcxproj.filters  Lab2.cpp  README.md  build.sh  run.sh
Lab2/Graph/: BasicGraph.h  CMakeLists.txt  Circle.cpp  Circle.h  ExtendFunction.cpp  ExtendFunction.h  Line.cpp  Line.h  Point.cpp  Point.h  Poly.cpp  Poly.h  Scene.cpp  Scene.h  TransformMatrix.cpp  Util.h
Lab2/src/: CMakeLists.txt
Lab2/src/BasicGraph/: BasicGraph.cpp  BasicGraph.h  CMakeLists.txt  Circle.cpp  Line.cpp  Line.h  Point.h  RGBCode.cpp  RGBCode.h  Util.h
Lab2/src/app/: CMakeLists.txt  lab2.cpp
Lab3/: .env  .gitignore  CMakeLists.txt  Lab3.vcxproj  Lab3.vcxproj.filters  README.md  build.sh  run.sh
Lab3/Data/: Lab3A.in  Lab3D.in
Lab3/apps/: Lab3.cpp
Lab3/include/Graph/: Camera.h  GObj.h  GShape.h  Scene.h  Transform.h
Lab3/include/Graph/Math/: Matrix.h  Vector.h
Lab3/include/Graph/Shape/: Circle.h  Line.h  Point.h
Lab3/src/: CMakeLists.txt  Camera.cpp  GObj.cpp  Scene.cpp  Transform.cpp
Lab3/src/Graph/: BasicGraph.cpp  CMakeLists.txt  Circle.h  Line.h  Point.cpp  Point.h  Poly.cpp  Poly.h  RGBCode.cpp  RGBCode.h  Scene.cpp  TransformMatrix.h  Util.cpp  Util.h
Lab3/src/Math/: Vector.cpp
Lab3/src/OBJ-Loader/: CMakeLists.txt
Lab3/src/Shape/: Circle.cpp  Line.cpp  Point.cpp  Poly.cpp
Lab3/src/app/: CMakeLists.txt  Lab3.cpp
Lab4/: CMakeLists.txt  Lab3.vcxproj  Lab3.vcxproj.filters  Lab4.sln  README.md  build.sh  run.sh
Lab4/Data/: lab4A.in  lab4B.in  lab4C.in  lab4D.in
Lab4/apps/: Lab4.cpp
Lab4/include/Graph/: Camera.h  GLInclude.h  GMath.h  GObj.h  GRGB.h  Light.h  Scene.h  Transform.h  Util.h
Lab4/include/Graph/Math/: Matrix.h  Util.h  Vector.h
Lab4/include/Graph/Shape/: Line.h  Point.h  Poly.h  Shape.h
Lab4/src/: CMakeLists.txt  Camera.cpp  GObj.cpp  Scene.cpp  Transform.cpp  Util.cpp
Lab4/src/Math/: Matrix.cpp  Vector.cpp
Lab4/src/Shape/: Line.cpp  Point.cpp  Poly.cpp
example_env/Lab0/: Lab0.vcxproj
